--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Vim mode for clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D 
@@ -41,9 +44,6 @@ bind -n S-Right next-window
 # No delay for escape key press
 set -sg escape-time 0
 
-# Reload tmux config
-bind r source-file ~/.tmux.conf
-
 # THEME
 set -g status-bg black
 set -g status-fg white
@@ -54,3 +54,9 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+
+# Source bashrc on start
+set-option -g default-shell "/bin/bash"
+
+# Reload tmux config
+bind r source-file ~/.tmux.conf
