--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,30 +45,11 @@ bind -n S-Right next-window
 set -sg escape-time 0
 
 # THEME
-
-# NEW STYLE
-
-#message-command-style style
-#message-style style
-#mode-style style
-#pane-active-border-style style
-#pane-border-style style
-#status-left-style style
-#status-right-style style
-#status-style style
-#window-active-style style
-#window-status-activity-style style
-#window-status-bell-style style
-#window-status-current-style style
-#window-status-last-style style
-#window-status-style style
-#window-style style
-
-setw -g window-status-style none, bg=white, fg=black, attr=bold
-
-# WILL BECOME DEPRECATED
 set -g status-bg black
 set -g status-fg white
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)'
