--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,8 +13,8 @@ setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
 
-bind-key v split-window -h
-bind-key s split-window -v
+#bind-key v split-window -h
+#bind-key s split-window -v
 
 # Vim style pane selection
 bind h select-pane -L
